fix: improved arrow visuals in the references section on mobile devices

--- a/src/app/main-content/references/references.component.scss
+++ b/src/app/main-content/references/references.component.scss
@@ -143,14 +143,18 @@ h1 {
   cursor: not-allowed;
 }
 
-.btn-prev:hover:not(:disabled) {
-  transform: translateX(-5px) scale(1.1);
-  background-image: url("./../../../assets/icons/arrow_back_aqua.png");
+@media (min-width: 1100px) {
+  .btn-prev:hover:not(:disabled) {
+    transform: translateX(-5px) scale(1.1);
+    background-image: url("./../../../assets/icons/arrow_back_aqua.png");
+  }
 }
 
-.btn-next:hover:not(:disabled) {
-  background-image: url("./../../../assets/icons/arrow_forward_aqua.png");
-  transform: translateX(5px) scale(1.1);
+@media (min-width: 1100px) {
+  .btn-next:hover:not(:disabled) {
+    background-image: url("./../../../assets/icons/arrow_forward_aqua.png");
+    transform: translateX(5px) scale(1.1);
+  }
 }
 
 .points {
@@ -197,11 +201,11 @@ h1 {
   .text-frame {
     padding: 32px;
     font-size: 16px;
-  } 
+  }
 }
 
 @media (max-width: 320px) {
   .text-frame {
     padding: 8px;
-  } 
+  }
 }
